// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContinueButton /> render() should render the Continue button as loading 1`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <svg
    class="spinner gloom spinner medium"
    preserveAspectRatio="xMidYMid meet"
    role="status"
    viewBox="0 0 20 20"
    width="100%"
  >
    <circle
      class="dot"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <circle
      class="circle"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </svg>
  <span>
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button as loading 2`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <svg
    class="spinner gloom spinner medium"
    preserveAspectRatio="xMidYMid meet"
    role="status"
    viewBox="0 0 20 20"
    width="100%"
  >
    <circle
      class="dot"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <circle
      class="circle"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </svg>
  <span>
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button as loading 3`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <svg
    class="spinner gloom spinner medium"
    preserveAspectRatio="xMidYMid meet"
    role="status"
    viewBox="0 0 20 20"
    width="100%"
  >
    <circle
      class="dot"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <circle
      class="circle"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </svg>
  <span>
    I Have Saved My Codes
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 1`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <span>
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 2`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <span>
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 3`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <span>
    I Have Saved My Codes
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 1`] = `
<button
  aria-disabled="false"
  class="wrapper fill primary medium"
  type="button"
>
  <span>
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 2`] = `
<button
  aria-disabled="false"
  class="wrapper fill primary medium"
  type="button"
>
  <span>
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 3`] = `
<button
  aria-disabled="false"
  class="wrapper fill primary medium"
  type="button"
>
  <span>
    I Have Saved My Codes
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 4`] = `null`;
